--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="nav-wrapper">
-                <a href="#" class="brand-logo valing-wrapper">Logo
-                    <img class="resposive-img-left" src="./Assets/Images/Logo.jpg" alt="">
-                </a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#">Sobre nosotros</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a class="btn" href="#">Registro</a></li>
-                </ul>
-            </div>
+        <nav class="container">
+            <a href="#" class="brand-logo valing-wrapper">Logo
+                <img class="resposive-img-left" src="./Assets/Images/Logo.jpg" alt="">
+            </a>
+            <ul class="right valign-wrapper">
+                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a class="btn" href="#">Registro</a></li>
+            </ul>
         </nav>
         <section class="header-main-pic">
-            <img src="./Assets/Images/Banner.jpg" alt="">
+           
         </section>
     </header>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
