--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
            
         </section>
     </header>
+    <main class="container">
+        <section>
+            <div class="section">
+                <div class="row">
+                    <div class="col m7 input-field input-container">
+                        <i class="material-icons prefix">search</i>
+                        <input id="search" type="text" placeholder="Buscar...">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <article class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="./Assets/Images/card1.jpg" alt="">
+                        </div>
+                    </div>
+            </div>
+        </section>
+    </main>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
