--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="./Assets/Images/card1.jpg" alt="">
                         </div>
+                          <div class="card-content">
+                            <span class="card-title grey-text activator text-darken-4">Post Title<i class="material-icons right">more_vert</i></span>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Post Title<i class="material-icons right">close</i> </span>
+                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                            <a class="waves-effect waves-teal btn-flat teal lighten-5 right" href="#">Ir</a>
+                        </div>
                     </div>
             </div>
         </section>
